# cargit

./: README.md  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yaml  deploy.yml
src/cargit/: __init__.py  cli.py  config.py  core.py  storage.py  utils.py
src/cli/: __init__.py  config.py  core.py  storage.py  utils.py
src/cli/commands/: clean.py  config_cmd.py  info.py  install.py  list.py  remove.py  rename.py  status.py  sync.py  update.py  which.py
