[project]
name = "cargit"
version = "0.1.0"
description = "Git-based cargo binary installer with incremental (compilation) updates"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "Jassiel Ovando", email = "jassielovando@protonmail.com" }]
dependencies = [
  "tomlkit>=0.13.3",
  "typer>=0.19.2",
]

[project.scripts]
cargit = "cargit:main"

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]
