[project]
name = "cargit"
version = "0.1.0"
description = "Git-based cargo binary installer with cached repositories for faster updates"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Jassiel Ovando", email = "jassielovando@protonmail.com" }]
dependencies = [
  "tomlkit>=0.13.3",
  "typer>=0.19.2",
]

[project.scripts]
cargit = "cargit:main"

[dependency-groups]
dev = [
  "ruff>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"
