[project]
name = "cargit"
version = "0.1.0"
description = "Git-based cargo binary installer with cached repositories for faster updates"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Jassiel Ovando", email = "jassielovando@protonmail.com" }]
dependencies = [
  "tomlkit>=0.13.3",
  "typer>=0.19.2",
]

[project.scripts]
cargit = "cli:app"

[dependency-groups]
dev = [
  "lizard>=1.21.0",
  "mkdocs-material>=9.7.1",
  "mkdocstrings[python]>=1.0.3",
  "pymdown-extensions>=10.20.1",
  "ruff>=0.13.2",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "cli"
